# n-body

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_shaders.py  gui.h  main.c
include/: constants.h  field.h  ghost.h  graphics.h  gui.h  simulation.h  trails.h  trajectories.h
lib/: arena.h  raygui.h  sdl_utils.h  types.h
src/: application.h  camera.c  camera.h  constants.h  draw.h  field.c  ghost.c  graphics.c  gui.c  gui.h  main.c  predictor.h  simulation.c  simulation.h  trails.c  trajectories.c
src/shaders/: field.comp.glsl  ghost_trajectory.comp.glsl  trail.comp.glsl  trajectory.comp.glsl
src/shaders/graphics/: field.vert.glsl  potential.frag.glsl  screen.vert.glsl  trail.vert.glsl  trajectory.vert.glsl
src/shaders/simulation/: euler.comp.glsl  verlet.comp.glsl
src/shaders/trajectory/: euler.comp.glsl  runge_kutta.comp.glsl  verlet.comp.glsl
